Fixed winner message to show full player name
Changes to json2html library

Now checks if the window has a vertical scrollbar

Changed fields in sidebar, added account button in menu

--- a/css/style.css
+++ b/css/style.css
@@ -44,3 +44,9 @@
     padding-bottom: 64px;
     text-decoration: none;
 }
+
+/* Sidebar classes */
+
+#button-submit>button {
+    width: 100%
+}
